What's New for PSPRadio 
========================

0.37-pre5
(raf) Enabled pausing of local streams
(raf) Cleanup/robustness added for play/stop core.
(raf) Corrected log times now that clock changed in sdk
(raf)

0.37-pre4 (r592) (11-23-2005)
(sandberg) Added support for showing the battery status and the current local time.
(raf) TextUI is now more configurable (for listboxes/textmode(font modes))
(raf) Added shadowed font mode for textui.
(raf) Added option to select if file extensions should be displayed or not in textui.
(raf) Added pngs for startup/shutdown of PSPRadio
(raf) Fixed problem where PSPRadio was exiting when it went into screen blank mode.
(raf) Now using pngs designed by Semtex/albadross/HalfastII
(raf) Added better support for suspending/resuming psp.


0.37-pre3 (r562) (c=r573)
(raf) The initial screen can now be selected in the PSPRadio.cfg file, under SYSTEM/INITIAL_SCREEN
(raf) Can now refresh the playlists from the Options screen.
(raf) Options can now be saved from options screen.
(raf) Some refactoring of options code/pspapp_network. Corrections on loglevels.
(raf) 0.37-pre3b: Corrected the WIFI:AUTOSTARTing.
(raf) 0.37-pre3c: Now you can save and restore USB autostart / wifi autostart / intial screen from the options screen

0.37-pre2
(raf) Corrected issue where SHOUTcast screen wasn't allocating memory for the lists, reusing the playlists' memory. This was causing instability in version 0.37-pre1.
(raf) Added a genre processing/parsing stage for shoutcast.com database.
(raf) Changed the text ui layout a bit, so that the stream name has more room

0.37-pre1 (r535)
(jpfouch48) Added scrolling text to metadata area. (Currently double buffering
is not working so it may look alittle choppy)
(sandberg) Added a radial blur effect as a background effect on the 3D UI.
(raf) Added code to draw font with outline - thanks to Halfast for the idea.
(raf) Revamped code to handle playlists in memory. 
(raf) Now shoutcast.com entries are sorted by genre